--- a/sampling_fitting_inference.ipynb
+++ b/sampling_fitting_inference.ipynb
@@ -575,8 +575,63 @@
       },
       "outputs": [],
       "source": [
-        "# YOUR WORK GOES HERE\n",
-        "# PASTE THIS CODE INTO THE FORUM PRE-CLASS WORKBOOK WHEN YOU'RE DONE!"
+        "# YOUR WORK GOES HERE
+        import pymc as pm
+        import matplotlib.pyplot as plt
+        import numpy as np
+        import scipy.stats as sts
+        
+        test_data = {
+            'treatment': {
+                'improved': 107,
+                'patients': 141},
+            'control': {
+                'improved': 57,
+                'patients': 121}
+        }
+        
+        with pm.Model() as my_model:
+          p = pm.Beta('p',alpha = 1, beta = 1)
+          x = pm.Binomial('x', n = test_data['control']['patients'], p = p, observed = test_data['control']['improved'])
+        
+        pm.model_to_graphviz(my_model)
+        
+        with my_model:
+          inference1 = pm.sample()
+        
+        all_p_samples_1 = inference1.posterior.p.values.flatten()
+        
+        plt.figure(figsize=(8, 4))
+        plt.title('Comparison of the sampling approximation and the exact posterior')
+        plt.xlabel('p')
+        plt.ylabel('probability density')
+        plt.hist(all_p_samples_1, bins=20, density=True, edgecolor='white', label='approximation')
+        x = np.linspace(0.5, 0.9, 500)
+        y = sts.beta.pdf(x, 58, 65)
+        plt.plot(x, y, label='exact')
+        plt.legend()
+        plt.show()
+        
+        with my_model:
+            approx = pm.fit()
+            inference2 = approx.sample(4000)
+        
+        all_p_samples_fit = inference2.posterior.p.values.flatten()
+        
+        plt.figure(figsize=(8,4))
+        plt.title('Function fitting approximation vs exact posterior')
+        plt.xlabel('p')
+        plt.ylabel('probability density')
+        plt.hist(all_p_samples_fit, bins=20, density=True, edgecolor='white', label='approximation')
+        x = np.linspace(0,1,500)
+        y = sts.beta.pdf(x, 58, 65)
+        plt.plot(x, y, label='exact')
+        plt.legend()
+        plt.show()
+        
+        
+        
+        # PASTE THIS CODE INTO THE FORUM PRE-CLASS WORKBOOK WHEN YOU'RE DONE!"
       ]
     },
     {
